--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ section > p {
 }
 
 .form-group input[type="text"],
+.form-group input[type="url"],
 .form-group select,
 .form-group textarea {
   padding: 0.8rem;
@@ -317,6 +318,7 @@ section > p {
 }
 
 .form-group input[type="text"]:focus,
+.form-group input[type="url"],
 .form-group select:focus,
 .form-group textarea:focus {
   outline: none;
